--- a/src/main/webapp/user/register.html
+++ b/src/main/webapp/user/register.html
@@ -23,6 +23,10 @@
     <title>注册</title>
 </head>
 <body style="width: 100%">
+<div id="header"></div>
+<script>
+    $("#header").load("../header.html")
+</script>
 <div class="flex center one demo">
     <div style="width: 800px;">
 
@@ -33,7 +37,7 @@
                 用户名:
             </td>
             <td>
-                <label><input type="text" name="username" v-model="username" id="username"></label>
+                <label style="height: 50px;"><input type="text" name="username" v-model="username" id="username"></label>
             </td>
             <td>
                 <span id="tips"></span>
@@ -217,7 +221,7 @@
                 },
                 register:function () {
                     if ($("#tips").text()=="该用户名可以使用"){
-                        if (this.upassword==this.upasswordrepeat&&$("#upassword").val().length>=6&&$("#upassword").val().length<=16){
+                        if (this.upassword==this.upasswordrepeat&&($("#upassword").val().length>=6&&$("#upassword").val().length<=16)||$("#upassword").val().length==40){
                             if($("#accept").prop('checked')){
                                 if(this.upassword.length!=40)
                                 {
@@ -238,6 +242,7 @@
                                             showConfirmButton: false,
                                             timer: 1500
                                         })
+                                        setTimeout("window.location.href='/user/login'", 1000)
                                     }
                                     else {
                                         Swal.fire({
