--- a/src/main/webapp/user/login.html
+++ b/src/main/webapp/user/login.html
@@ -11,7 +11,7 @@
     <style>
         td {
             text-align: center;
-            background: #fff;
+            background: rgba(255,255,255,0.8);
         }
 
         input {
@@ -28,7 +28,7 @@
 <script>
     $("#header").load("../header.html")
 </script>
-<div class="flex center one demo" id="app">
+<div class="flex center one demo" id="logindiv">
     <div class="500" style="width: 500px;">
         <table>
             <tr>
@@ -116,7 +116,7 @@
                 }
             }
         }
-    ).mount('#app')
+    ).mount('#logindiv')
 </script>
 </body>
 </html>
