--- a/src/main/webapp/user/msg.html
+++ b/src/main/webapp/user/msg.html
@@ -1,89 +1,115 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <script src='../js/userinformation.js'></script>
-  <script src="../js/vue.global.js"></script>
-  <script src="../js/axios.min.js"></script>
-  <script src="../js/element-plus.full.js"></script>
-  <link rel="stylesheet" href="../css/element.css">
-  <link rel="stylesheet" href="../css/information.css">
-  <title>用户信息</title>
+    <meta charset="UTF-8">
+    <script src="/js/vue.global.js"></script>
+    <script src="/js/axios.min.js"></script>
+    <script src="/js/jquery-3.0.0.js"></script>
+    <script src="/js/sweetalert2.all.min.js"></script>
+    <script src="/js/sha1.min.js"></script>
+    <script src="/js/flickity.pkgd.min.js"></script>
+    <link rel="stylesheet" href="/css/flickity.css">
+    <link rel="stylesheet" href="/css/picnic.css">
+    <title>用户信息</title>
 </head>
 <body>
+<div id="header"></div>
+<script>
+    $(document).ready(function () {
+        $("#header").load("/header.html")
+    })
+</script>
 <div style="width: 980px;margin: 0 auto">
-  <el-row>
-    <el-col :span="24">
-      <div class="grid-content" />
-      <table id="userinformation">
-        <tr>
-          <td>
-            uid:{{user.uid}}
-          </td>
-          <td>
-            邮箱状态:{{user.ifconfirmemail}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            用户名:{{user.username}}
-          </td>
-        </tr>
-        <tr>
-          <td>
-            简介:{{user.describes}}
-          </td>
-        </tr>
-        <!--        <tr>-->
-        <!--            <td>-->
-        <!--                用户组:{{user.}}-->
-        <!--            </td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>-->
-        <!--                发帖数:{{user.}}-->
-        <!--            </td>-->
-        <!--        </tr>-->
-        <!--        <tr>-->
-        <!--            <td>-->
-        <!--                回复数:{{user.}}-->
-        <!--            </td>-->
-        <!--        </tr>-->
-        <tr>
-          <td>
-            注册时间:{{user.registertime}}
-          </td>
-        </tr>
-      </table>
-    </el-col>
-  </el-row>
+    <el-row>
+        <el-col :span="24">
+            <div class="grid-content" style="background-color:rgba(255,255,255,0.8);">
+            <table id="userinformation">
+                <tr>
+                    <td>
+                        头像:
+                        <img :src="'/resource/img/upload/'+user.img" style="width: 100px;height: 100px;" >
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        uid:{{user.uid}}
+                    </td>
+                    <td>
+                        邮箱状态:{{user.ifconfirmemail}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        用户名:{{user.username}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        简介:{{user.describes}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        用户组:{{usergroup.usergroup}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        发帖数:{{user.postcount}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        回复数:{{user.replycount}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        注册时间:{{user.registertime}}
+                    </td>
+                </tr>
+            </table>
+            </div>
+        </el-col>
+    </el-row>
 
 </div>
 
 <script>
-  const {createApp} = Vue
-  createApp({
-    data() {
-      return {
-        message: 'Hello Vue!',
-        user: []
-      }
-    },
-    mounted() {
-      var _this = this;
-      axios({
-        method: "post",
-        url: "/userinformationServlet"
-      }).then(function (resp) {
-        _this.user = resp.data
-        if (_this.user.ifconfirmemail == 1) {
-          _this.user.ifconfirmemail = "已验证"
-        } else {
-          _this.user.ifconfirmemail = "未验证"
+    const {createApp} = Vue
+    createApp({
+        data() {
+            return {
+                user: [],
+                usergroup:[]
+            }
+        },
+        mounted() {
+            var _this = this;
+            URL = document.URL
+            resourceposition = URL.indexOf("msg");
+            resourceposition = resourceposition+4
+            postclass = URL.substring(resourceposition)
+            axios({
+                method: "post",
+                url: "/userinformationServlet?reuid="+postclass
+            }).then(function (resp) {
+                _this.user = resp.data
+                if (_this.user.ifconfirmemail == 1) {
+                    _this.user.ifconfirmemail = "已验证"
+                } else {
+                    _this.user.ifconfirmemail = "未验证"
+                }
+            })
+            axios({
+                method: "post",
+                url: "/usergroupServlet?reuid="+postclass
+            }).then(function (resp) {
+                _this.usergroup = resp.data
+                console.log(resp.data)
+            })
         }
-      })
-    }
-  }).mount('#userinformation')
+    }).mount('#userinformation')
 </script>
 </body>
 </html>
