--- a/src/main/webapp/header.html
+++ b/src/main/webapp/header.html
@@ -8,6 +8,9 @@
   <script src="/js/jquery.cookie.js"></script>
   <link rel="stylesheet" href="/css/picnic.css">
   <style>
+    #app{
+      background-color: rgba(255,255,255,0.8);
+    }
     .leftbtn:hover{
       background-color: #aaa;
     }
@@ -70,6 +73,10 @@
     #menubtnadiv a{
       color: black;
     }
+    body{
+      background-image: url('/resource/img/background.jpg');
+      background-attachment: fixed;
+    }
   </style>
     <title>header</title>
 </head>
@@ -103,11 +110,11 @@
   </a>
   <div style="width: 1190px;margin: 0 auto;position: absolute;top: 50px">
     <div id="menu">
-      <div class="menubtn"><a>个人主页</a></div>
-      <div class="menubtn"><a>用户设置</a></div>
-      <div class="menubtn"><a>用户收藏</a></div>
-      <div class="menubtn"><a>用户消息</a></div>
-      <div class="menubtn" id="logout"><a>退出登录</a></div>
+      <a href="/user/msg/" id="apersonal"><div class="menubtn">个人主页</div></a>
+<!--      <a href="/user/msg/" id="auserset"><div class="menubtn">用户设置</div></a>-->
+<!--      <a href="/user/msg/" id="ausercollect"><div class="menubtn">用户收藏</div></a>-->
+<!--      <a href="/user/msg/" id="ausermsg"><div class="menubtn">用户消息</div></a>-->
+      <a id="logout"><div class="menubtn">退出登录</div></a>
     </div>
   </div>
 </div>
@@ -141,6 +148,10 @@ $(document).ready(function () {
     $.cookie("verifycode",null,{expires: -1,path: "/"})
     location.reload();
   })
+  $("#apersonal").attr('href','/user/msg/'+$.cookie('uid'))
+  // $("#ausercollect").attr('href','/user/msg/'+$.cookie('uid'))
+  // $("#ausermsg").attr('href','/user/msg/'+$.cookie('uid'))
+  // $("#auserset").attr('href','/user/msg/'+$.cookie('uid'))
 })
 </script>
 
