--- a/src/main/webapp/user/register.html
+++ b/src/main/webapp/user/register.html
@@ -17,7 +17,7 @@
         }
         td{
             text-align: center;
-            background: #fff;
+            background: rgba(255,255,255,0.8);
         }
     </style>
     <title>注册</title>
