--- a/src/main/webapp/PostList.html
+++ b/src/main/webapp/PostList.html
@@ -29,7 +29,7 @@
 <div id="header"></div>
 <script>
     $(document).ready(function () {
-        $("#header").load("../header.html")
+        $("#header").load("/header.html")
     })
 </script>
 
@@ -38,7 +38,7 @@
         <div class="flex one">
             <div v-for="post in postlist">
                 <div style="background-color:rgba(255,255,255,0.8);">
-                    <a :href="'/Posts/'+post.pid" style="color: black;">
+                    <a :href="'/Posts/'+post.pid+'?page=1'" style="color: black;">
                         <div class="postclassdiv">
                             <div>
                                 <p>&nbsp;&nbsp; {{post.title}}</p>
