--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -62,7 +62,7 @@
 <div class="flex two">
     <div v-for="u in user">
         <div style="background-color:rgba(255,255,255,0.8);">
-        <a :href="'/PostClass/'+u.englishname" style="color: black;">
+        <a :href="'/PostClass/'+u.englishname+'?page=1'" style="color: black;">
         <div class="postclassdiv">
         <div>
             <img :src="'/resource/img/PostClass/'+u.pcid+'.jpg'" id="postclassimg">
