--- a/src/main/webapp/postContent.html
+++ b/src/main/webapp/postContent.html
@@ -8,7 +8,7 @@
     <script src="/js/sweetalert2.all.min.js"></script>
     <script src="/js/sha1.min.js"></script>
     <script src="/js/flickity.pkgd.min.js"></script>
-    <script src="/js/tinymce.min.js"></script>
+    <script src="/js/tinymce/tinymce.min.js"></script>
     <link rel="stylesheet" href="/css/flickity.css">
     <link rel="stylesheet" href="/css/picnic.css">
     <title>帖子详情</title>
